# structsvm

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/structsvm/: __init__.py  bundle_method.py  hamming_costs.py  linear_costs.py  soft_margin_loss.py
tests/: test_bundle_method.py  test_ssvm.py
