# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

# https://peps.python.org/pep-0621/
[project]
name = "structsvm"
dynamic = ["version"]
description = "Structured Bundle Method for Risk Minimization."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { email = "funkej@janelia.hhmi.org", name = "Jan Funke" },
    { email = "talley.lambert@gmail.com", name = "Talley Lambert" },
]
dependencies = ['ilpy >=0.5.0', 'numpy']
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]


# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0", "pytest-cov", "ilpy[scip]>=0.5.0"]
dev = ["structsvm[test]", "ruff", "mypy", "pre-commit", "ipython"]

[project.urls]
homepage = "https://github.com/funkelab/structsvm"
repository = "https://github.com/funkelab/structsvm"


# https://docs.astral.sh/ruff
[tool.ruff]
target-version = "py39"
src = ["src"]

# https://docs.astral.sh/ruff/rules
[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TC",   # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
ignore = [
    "RUF001", # ambiguous variable name
    "RUF003", # ambiguous variable name
]


[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
files = "src/**/"
strict = true
disallow_any_generics = false
disallow_subclassing_any = false
show_error_codes = true
pretty = true
